# bazaszachowa-tools

./: .gitignore  .gitmodules
cpp/: CMakeLists.txt  cpp.kdev4
cpp/.kdev4/: cpp.kdev4
cpp/src/: basicVisitor.hpp  lichess_classify.cpp  mysql_settings.hpp  pgn2sql.cpp  prepare_pgn.cpp  remote2pgn.cpp
python/: .gitignore  corrupted_url.py  decode_data.py  fill_date_lichess.py  pgn2sqlpy.py  removeDuplicates.py  removeDuplicatesIgnoreYear.py  removeSimilar.py  requirements.txt  settings.py
python/cr_tournaments/: mongo_scrap.py
python/fide_tournaments/: mongo_scrap.py
python/fide_tournamwnts/: mongo_scrap.py
python/players_names/: correct_names.py  correct_names_reverse_fide.py  correct_names_reverse_pol.py  determine_fide_players_borders.py  fill_import.py  genereate_ssp.py  update_fide_players.py
python/players_names/aliases/: fill.py  question_mark.py  replace.py  replaceAliasesMongoPolTour.py  scrap_wiki.py
python/repeatable_tasks/: __init__.py  refresh_games.py  scrap_chessbase.py  scrap_lichess.py  scrap_twic.py  utils.py
sql/: add_import_names.sql  all_games_remove_incorrect_elo.sql  clean_all.sql  clean_poland.sql  correct_asian_lichess.sql  correct_events.sql  correct_priest.sql  import_all_filled.sql  import_pol_filled.sql  player_spaces.sql  poland_games_remove_incorrect_elo.sql  remove_incorrect_old_rating.sql  remove_wierd_computer.sql  replace_aliases.sql  resolve_number_names.sql  resolve_patronymic.sql  switch_names_all.sql
